Hidden Bones cant be active (thus cant be accessed in Outliner) #116138

Closed
opened 2023-12-13 12:45:21 +01:00 by walt · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: (newest version of Blender that worked as expected)

Short description of error
selected hidden bones are not accessible in property-editor

Exact steps for others to reproduce the error

  • Create an Armature
  • Add some bones
  • Hide some bones
  • select one of the hidden bones from the outliner

no refresh in the property-window, only visible will be accessible.
(setting : sync with outliner auto/always no difference)

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: (newest version of Blender that worked as expected) **Short description of error** selected hidden bones are not accessible in property-editor <video src="/attachments/a0fc73be-a5e9-4ad3-a845-465b2b734c81" controls></video> **Exact steps for others to reproduce the error** - Create an Armature - Add some bones - Hide some bones - select one of the hidden bones from the outliner no refresh in the property-window, only visible will be accessible. (setting : sync with outliner auto/always no difference)
walt added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-12-13 12:45:22 +01:00

I can confirm.

I can confirm.
Germano Cavalcante added
Module
Animation & Rigging
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-13 21:43:10 +01:00
Member

Hm, this is true even if it is pinned...

Hm, this is true even if it is pinned...
Member

So the reason why this happens is that we dont allow hidden bones to be active (It is prevented from the Outliner, also check ED_armature_edit_validate_active). This is not in line with other things in blender (hidden stuff can still be active, just not selected...)

Asked around in chat and @dr.sybren agrees this should be changed: "I'd say that's a misunderstanding of the UI rules, then. There is no other reason, and being more in line with the rest of Blender is definitely a good reason to change the current implementation."

So the reason why this happens is that we dont allow hidden bones to be active (It is prevented from the Outliner, also check `ED_armature_edit_validate_active`). This is not in line with other things in blender (hidden stuff can still be active, just not selected...) Asked around in chat and @dr.sybren agrees this should be changed: "I'd say that's a misunderstanding of the UI rules, then. There is no other reason, and being more in line with the rest of Blender is definitely a good reason to change the current implementation."
Philipp Oeser changed title from Hidden Bones in Property to Hidden Bones cant be active (thus cant be accessed in Outliner) 2023-12-15 09:04:41 +01:00
Author

Ah, that makes me happy ,
makes things a lot easier.

Ah, that makes me happy , makes things a lot easier.
walt closed this issue 2023-12-15 14:44:43 +01:00
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-12-15 14:44:45 +01:00
walt reopened this issue 2023-12-15 14:44:59 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-12-15 14:45:02 +01:00
Iliya Katushenock added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-15 15:06:35 +01:00
Christoph Lendenfeld self-assigned this 2024-05-23 17:57:41 +02:00

stepping down, there is already a PR attached to this report
#117012: Fix #116138: make hidden bones show up in Properties when selected in Outliner
(just very hard to see on this platform)

stepping down, there is already a PR attached to this report [#117012: Fix #116138: make hidden bones show up in Properties when selected in Outliner](https://projects.blender.org/blender/blender/pulls/117012) (just very hard to see on this platform)
Christoph Lendenfeld removed their assignment 2024-05-24 10:43:29 +02:00
Christoph Lendenfeld self-assigned this 2024-06-14 17:01:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-18 13:54:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116138
No description provided.