Fix #116138: make hidden bones show up in Properties when selected in Outliner